
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 scalar_t__ putchar (char) ;

void sh_outp(char *cur_string)
{
    int symbol;
    putchar('\n');
    putchar('\n');
    for(symbol=3;putchar(cur_string[symbol]); symbol++);
}
